syntax = "proto3";

package query;

import "google/api/annotations.proto";

option go_package = "bothan-api/query";

// Query defines the gRPC service.
service Query {
  // RPC method that returns all prices of requested signal ids.
  rpc Prices(QueryPricesRequest) returns (QueryPricesResponse) {
    option (google.api.http).get = "/prices/{signal_ids}";
  }
}

// QueryPricesRequest is the request type for the PriceService/GetPrices RPC
// method.
message QueryPricesRequest {
  repeated string signal_ids = 1;
}

// QueryPricesResponse is the response type for the PriceService/GetPrices RPC
// method.
message QueryPricesResponse {
  repeated AssetPrice prices = 1;
}

// AssetPrice contains the price of a signal ID.
message AssetPrice {
  // The asset's signal ID.
  string signal_id = 1;
  // The asset's price.
  string price = 2;
  // The asset's price status.
  Status status = 3;
}

// Status is the status that defines the AssetPrice result.
enum Status {
  UNSUPPORTED = 0;
  UNAVAILABLE = 1;
  AVAILABLE = 2;
}
